@@ -17,7 +17,7 @@ import uk.gov.ons.census.fwmt.events.component.GatewayEventManager;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import static uk.gov.ons.census.fwmt.csvservice.implementation.ccs.CCSCanonicalBuilder.createCCSJob;
 import static uk.gov.ons.census.fwmt.csvservice.implementation.ccs.CCSGatewayEventsConfig.CANONICAL_CCS_CREATE_SENT;
@@ -61,7 +61,7 @@ public class CCSConverterService implements CSVConverterService {
     }
 
     try {
-      moveCsvFile(csvGCPFile, Path.of(csvGCPFile.getURI()), Path.of(processedPath.getURI()));
+      moveCsvFile(csvGCPFile, Paths.get(csvGCPFile.getURI()), Paths.get(processedPath.getURI()));
     } catch (IOException e) {
       throw new GatewayException(GatewayException.Fault.SYSTEM_ERROR, e, "Failed to read path");
     }
